--- a/.config/i3/config
+++ b/.config/i3/config
@@ -38,6 +38,7 @@ exec_always --no-startup-id xrdb -load ~/.Xresources
 
 exec --no-startup-id ~/.config/polybar/launch.sh
 exec --no-startup-id dunst
+exec --no-startup-id xcompmgr
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
