--- a/.config/i3/config
+++ b/.config/i3/config
@@ -202,3 +202,21 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+
+set $Locker i3lock && sleep 1
+
+set $mode_system l: Lock, e: Logout, s: Suspend, h: Hibernate, r: Reboot, S: Shutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id $Locker, mode "default"
+    bindsym e exec --no-startup-id i3-msg exit, mode "default"
+    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
+    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
+    bindsym r exec --no-startup-id systemctl reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
+bindsym $mod+Shift+x mode "$mode_system"
