--- a/.config/i3/config
+++ b/.config/i3/config
@@ -33,7 +33,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
-exec_always --no-startup-id feh --bg-scale ~/wallpaper.jpeg
+exec_always --no-startup-id feh --bg-scale ~/.wallpaper.jpeg
 exec_always --no-startup-id xrdb -load ~/.Xresources
 
 exec --no-startup-id ~/.config/polybar/launch.sh
