--- a/.config/i3/config
+++ b/.config/i3/config
@@ -68,7 +68,7 @@ bindsym $mod+Return exec urxvt
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id "rofi -modes drun,run,window -show drun"
+bindsym $mod+d exec --no-startup-id ~/.config/rofi/launcher.sh
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
