--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -73,9 +73,9 @@ content-foreground = ${color.primary}
 content-padding = 1
 
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
-click-left = ~/.config/polybar/scripts/launcher.sh &
+click-left = ~/.config/rofi/launcher.sh &
 ;;click-middle = ~/.config/polybar/scripts/launcher-full
-click-right = ~/.config/polybar/scripts/color-switch.sh &
+;click-right = ~/.config/polybar/scripts/color-switch.sh &
 
 ; "scroll-(up|down)" will be executed using "/usr/bin/env sh -c $COMMAND"
 ;;scroll-up = ~/.config/polybar/scripts/launcher.sh &
@@ -211,7 +211,7 @@ expand-right = true
 ;   menu-close
 ; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
 menu-0-0 = Menu
-menu-0-0-exec = ~/.config/polybar/cuts/scripts/launcher.sh &
+menu-0-0-exec = ~/.config/rofi/launcher.sh &
 menu-0-1 = Files
 menu-0-1-exec = thunar &
 menu-0-2 = Terminal
